--- a/report/FinalReport/Generalisation.tex
+++ b/report/FinalReport/Generalisation.tex
@@ -1,7 +1,7 @@
 \section{Proof for multiple cliques with connections}
 \label{strongResult}
 Using what we saw so far, we can prove that FLIP is polynomial for a most general case. \\
-Let G = (V,E) of $n$ vertices and $m$ edges be a graph composed of a family $H = \{H_1, H_2,..., H_h\}$ of cliques and some vertices whose degree is at most $log(n)$. Assume further that all vertices in $H$ have at most $log(n)$ edges going to the other cliques.\\
+Let $G = (V,E)$ be a graph of $n$ vertices and $m$ edges composed of a family $H = \{H_1, H_2,..., H_h\}$ of cliques and some vertices whose degree is at most $\log(n)$. Assume further that all vertices in $H$ have at most $\log(n)$ edges going to the other cliques.\\
 We will prove that FLIP terminates in a polynomial number of step by proving the following proposition :
 \begin{proposition}
 With high probability, there exists no $\epsilon$-slowly improving sequence $L$ of size $2n^2$
@@ -20,7 +20,7 @@ P(A) \leq P(A_1) + P(A_2) + P(A_3)
  
 Assume $A_1$, then there exists some vertex $v$ in the sequence that has logarithmic degree. We saw that with high probability there exists no such $v$ that leads to an improvement of less than $\epsilon$ for $\epsilon = n^{-2-\eta}\phi^{-1}$, with $\eta > 0$.\\
 
-We saw that the $CSub$ in $A_2$ has rank at least $1.25s(CSub)$. We can also use the lemma \ref{lem::partition} with $E_2(v_t)$ being the edges going from $v_t$ to another clique. Since there are at most $log(n)$ such edges, the improvement made by the rest of the edges must lie in the union of at most $2^{log(n)}$ intervals of measure $\epsilon$, we can also say that the improvement made by the other edges must lie in an interval of measure at most $n\epsilon$.\\
+We saw that the $CSub$ in $A_2$ has rank at least $1.25s(CSub)$. We can also use the lemma \ref{lem::partition} with $E_2(v_t)$ being the edges going from $v_t$ to another clique. Since there are at most $\log(n)$ such edges, the improvement made by the rest of the edges must lie in the union of at most $2^{\log(n)}$ intervals of measure $\epsilon$, we can also say that the improvement made by the other edges must lie in an interval of measure at most $n\epsilon$.\\
 Using lemma \ref{cor::boundN} along with an union-bound on possible $CSub$ we get the following bound :
  \begin{equation*}
  \begin{split}
