--- a/report/FinalReport/ProofMultipleCliques.tex
+++ b/report/FinalReport/ProofMultipleCliques.tex
@@ -1,5 +1,5 @@
 \section{Proof for graphs with multiple distant cliques}
-Let $G = (V,E)$ be a graph with $n$ vertices and $m$ edges. Assume that this graph contain a family $H$ of cliques $H_1, ... H_h$ of $r_1, ... , r_h$ vertices and that the degree of vertices in the set $G \setminus \bigcup_{i = 1}^h H_i$ is at most $log(n)$. Furthermore, forall $1 \leq i < j \leq h$ and any pair of two vertices $v$ and $w$ such that  $v \in H_i, w \in H_j$; we have $v \neq w, vw \not \in E$\\
+Let $G = (V,E)$ be a graph with $n$ vertices and $m$ edges. Assume that this graph contain a family $H$ of cliques $H_1, ... H_h$ of $r_1, ... , r_h$ vertices and that the degree of vertices in the set $G \setminus \bigcup_{i = 1}^h H_i$ is at most $\log(n)$. Furthermore, forall $1 \leq i < j \leq h$ and any pair of two vertices $v$ and $w$ such that  $v \in H_i, w \in H_j$; we have $v \neq w, vw \not \in E$\\
 Any pair of cliques is distant, meaning that a path going from a vertex of one clique to the other is of length at least 2. \\
 The precedent proof can be easily extended to those graphs. We will prove a similar proposition, but on longer sequences.
 
