--- a/report/FinalReport/ProofOneClique.tex
+++ b/report/FinalReport/ProofOneClique.tex
@@ -11,27 +11,27 @@ Proving this proposition implies that the smoothed complexity is $O(\text{poly}(
 If there exists no such sequence, then $2n^2/\epsilon$ sequence of $2n$ moves yield an improvement of at least $2n^2$ which is the maximum improvement possible since $h(\sigma) \in [-n^2,n^2]$. \\
 Thus number of steps is $O(n^3/\epsilon)$ which is $O(poly(n))$. \\
 
-We will prove the proposition by considering different sequences of size 2n.\\
-Let l(L) = 2n : \\
+We will prove the proposition by considering different sequences of size 2$n$.\\
+Let l(L) = 2$n$ : \\
 $D$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 $\\
 $D_1$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 \\
 \text{ and }S(L) \not\subseteq H$.\\
 $D_2$ is the event corresponding to $\exists L, \sigma_0,\text{ s.t. L is }\epsilon$-slowly  improving from $\sigma_0$ and $S(L) \subseteq H\text{ and }s(L) < r$. \\
 $D_3$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0$, s.t. B is $\epsilon$-slowly improving from $\sigma_0$ and $S(L) \subseteq H \text{ , } s(B) = r $\\
-By the lemma \ref{critical} on existence of critical blocks and the fact that if $s(L) = n$ implies that some vertex with degree at most log(n) is chosen we can have this bound:
+By the lemma \ref{critical} on existence of critical blocks and the fact that if $s(L) = n$ implies that some vertex with degree at most $\log(n)$ is chosen we can have this bound:
 
 \begin{equation*}
 P(D) \leq P(D_1) + P(D_2) + P(D_3)
 \end{equation*}
 
-Consider $D_1$. Fix $L$ and $\sigma_0$ then there must be a vertex $v \in S(L)$ whose degree is at most $log(n)$. By lemma  \ref{noise}, the probability that $\alpha_v \in [0, \epsilon] = \phi \epsilon$. Using union bound on the number of vertices and the starting configuration of those vertices we have:
+Consider $D_1$. Fix $L$ and $\sigma_0$ then there must be a vertex $v \in S(L)$ whose degree is at most $\log(n)$. By lemma  \ref{noise}, the probability that $\alpha_v \in [0, \epsilon] = \phi \epsilon$. Using union bound on the number of vertices and the starting configuration of those vertices we have:
 \begin{equation}
-P(D_1)  \leq 2^{log(n)}n \phi \epsilon
+P(D_1)  \leq 2^{\log(n)}n \phi \epsilon
 \end{equation}
 By taking $\epsilon = n^{-2 - \eta} \phi^{-1}$ with $\eta > 0$ there exists no such sequence with high probability. \\
 
 Now consider $D_2$. We consider the subgraph G' induced by the restriction to the clique H. Denote $A_L^{G'}$ the matrix formed by the concatenation of the move vectors of L restricted to $G'$. We observe that $\rank(A_L^{G'}) \leq \rank_(A_L)$ Since $A_L^{G'}$ is a submatrix of $A_L$.\\ 
-By lemma \ref{critical}, there exists a critical block B whose rank is at least 1.25 s(B).We now can use corollary \ref{cor::boundN} to have this bound:
+By lemma \ref{critical}, there exists a critical block $B$ whose rank is at least $1.25 s(B)$.We now can use corollary \ref{cor::boundN} to have this bound:
 \begin{equation*}
 P(B \text{ is }\epsilon \text {-slowly improving from some }\sigma) \leq \left(\frac{2n}{\epsilon}\right)^{s(B)}(48\phi\epsilon)^{\frac{5s(B)}{4}}
 \end{equation*}
@@ -41,7 +41,7 @@ P(D_2) \leq 2 \sum_{s < n}(96\phi^{5/4}n^3\epsilon^{1/4})^s
 \end{equation*}
 By choosing $\epsilon = n^{-(12 + \eta)}\phi^{-5}$ this sums goes to zero.\\
 
-For $D_3$, we use a trick to show that the $\rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$. We choose some $u \in V \setminus H$. For each vertex v which has a non-flipped neighbour, we delete that edge and add $uv$ to the graph. This does not change $\rank(A_L)$ since the row added is the same as the row deleted times 1 or -1. Now we add edges from $u$ to the remaining vertices on the clique, increasing the rank by at most $s(B) - s_0(B)$. The subgraph G' determined by $H \cup \{u\}$ is thus complete and we can use  lemma \ref{critical} to have $\rank(A_L^{G'}) \geq 1.25 s(B)$. Then $rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$.
+For $D_3$, we use a trick to show that the $\rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$. We choose some $u \in V \setminus H$. For each vertex $v$ which has a non-flipped neighbour, we delete that edge and add $uv$ to the graph. This does not change $\rank(A_L)$ since the row added is the same as the row deleted times 1 or -1. Now we add edges from $u$ to the remaining vertices on the clique, increasing the rank by at most $s(B) - s_0(B)$. The subgraph G' determined by $H \cup \{u\}$ is thus complete and we can use  lemma \ref{critical} to have $\rank(A_L^{G'}) \geq 1.25 s(B)$. Then $\rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$.
 By corollary \ref{cor::boundN} we have :
 \begin{equation*}
 P(D_3) \leq  \sum_{s < n}n^{2s}\left(\dfrac{2n}{\epsilon}\right)^{s_0}(48\phi\epsilon)^{s/4 + s_0} \leq \sum_{s < n}(Cn^{3}\phi^{5/4}\epsilon^{1/4})^{s}, \text{ for }C>0
